// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sc-customer-login renders 1`] = `
<sc-customer-login>
  <mock:shadow-root>
    <div class="customer-login">
      <div class="customer-login__email">
        <div class="customer-login__email-text">
          <div class="customer-login__email-label">
            Email
          </div>
          <div class="customer-login__email-value"></div>
        </div>
        <div class="customer-login__back">
          <sc-button size="small" type="text">
            <sc-icon aria-label="Change email address" class="customer-login__back-icon" name="x"></sc-icon>
          </sc-button>
        </div>
      </div>
      <div class="customer-code">
        <p class="customer-code__hint">
          Enter the code sent to
          <span class="customer-code__preview"></span>
          to securely use your saved information.
        </p>
        <div>
          <div class="customer-code__reset">
            <sc-verification-code total="6"></sc-verification-code>
          </div>
        </div>
        <div class="customer-code__resend">
          <sc-button disabled="" type="link">
            <span>
              Resend in 60s
            </span>
          </sc-button>
        </div>
      </div>
      <div class="customer-login__mode">
        <sc-button size="small" type="text">
          <sc-icon aria-hidden="true" name="lock" slot="prefix"></sc-icon>
          Use Password
        </sc-button>
      </div>
    </div>
  </mock:shadow-root>
</sc-customer-login>
`;

exports[`sc-customer-login renders with user logged in and matched 1`] = `
<sc-customer-login>
  <mock:shadow-root>
    <div class="customer-login">
      <div class="customer-login__email">
        <div class="customer-login__email-text">
          <div class="customer-login__email-label">
            Email
          </div>
          <div class="customer-login__email-value">
            test@example.com
          </div>
        </div>
        <div class="customer-login__back">
          <sc-button size="small" type="text">
            <sc-icon aria-label="Change email address" class="customer-login__back-icon" name="x"></sc-icon>
          </sc-button>
        </div>
      </div>
      <div class="customer-code">
        <p class="customer-code__hint">
          Enter the code sent to
          <span class="customer-code__preview">
            test@example.com
          </span>
          to securely use your saved information.
        </p>
        <div>
          <div class="customer-code__reset">
            <sc-verification-code total="6"></sc-verification-code>
          </div>
        </div>
        <div class="customer-code__resend">
          <sc-button disabled="" type="link">
            <span>
              Resend in 60s
            </span>
          </sc-button>
        </div>
      </div>
      <div class="customer-login__mode">
        <sc-button size="small" type="text">
          <sc-icon aria-hidden="true" name="lock" slot="prefix"></sc-icon>
          Use Password
        </sc-button>
      </div>
    </div>
  </mock:shadow-root>
</sc-customer-login>
`;

exports[`sc-customer-login renders with user logged in and not matched 1`] = `
<sc-customer-login>
  <mock:shadow-root>
    <div class="customer-login">
      <div class="customer-login__email">
        <div class="customer-login__email-text">
          <div class="customer-login__email-label">
            Email
          </div>
          <div class="customer-login__email-value">
            test@example.com
          </div>
        </div>
        <div class="customer-login__back">
          <sc-button size="small" type="text">
            <sc-icon aria-label="Change email address" class="customer-login__back-icon" name="x"></sc-icon>
          </sc-button>
        </div>
      </div>
      <div class="customer-code">
        <p class="customer-code__hint">
          Enter the code sent to
          <span class="customer-code__preview">
            test@example.com
          </span>
          to securely use your saved information.
        </p>
        <div>
          <div class="customer-code__reset">
            <sc-verification-code total="6"></sc-verification-code>
          </div>
        </div>
        <div class="customer-code__resend">
          <sc-button disabled="" type="link">
            <span>
              Resend in 60s
            </span>
          </sc-button>
        </div>
      </div>
      <div class="customer-login__mode">
        <sc-button size="small" type="text">
          <sc-icon aria-hidden="true" name="lock" slot="prefix"></sc-icon>
          Use Password
        </sc-button>
      </div>
    </div>
  </mock:shadow-root>
</sc-customer-login>
`;

exports[`sc-customer-login renders with user not logged in and matched 1`] = `
<sc-customer-login>
  <mock:shadow-root>
    <div class="customer-login">
      <div class="customer-login__email">
        <div class="customer-login__email-text">
          <div class="customer-login__email-label">
            Email
          </div>
          <div class="customer-login__email-value">
            test@example.com
          </div>
        </div>
        <div class="customer-login__back">
          <sc-button size="small" type="text">
            <sc-icon aria-label="Change email address" class="customer-login__back-icon" name="x"></sc-icon>
          </sc-button>
        </div>
      </div>
      <div class="customer-code">
        <p class="customer-code__hint">
          Enter the code sent to
          <span class="customer-code__preview">
            test@example.com
          </span>
          to securely use your saved information.
        </p>
        <div>
          <div class="customer-code__reset">
            <sc-verification-code total="6"></sc-verification-code>
          </div>
        </div>
        <div class="customer-code__resend">
          <sc-button disabled="" type="link">
            <span>
              Resend in 60s
            </span>
          </sc-button>
        </div>
      </div>
      <div class="customer-login__mode">
        <sc-button size="small" type="text">
          <sc-icon aria-hidden="true" name="lock" slot="prefix"></sc-icon>
          Use Password
        </sc-button>
      </div>
    </div>
  </mock:shadow-root>
</sc-customer-login>
`;
